Add acceptance stage

--- a/.github/workflows/acceptance-stage.yml
+++ b/.github/workflows/acceptance-stage.yml
@@ -32,19 +32,19 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - run: echo "Running security tests"
-#  deliver:
-#    name: Deliver release candidate to production
-#    needs: [ functional, performance, security ]
-#    runs-on: ubuntu-22.04
-#    steps:
-#      - name: Deliver application to production
-#        uses: peter-evans/repository-dispatch@v3
-#        with:
-#          token: ${{ secrets.DISPATCH_TOKEN }}
-#          repository: ${{ env.OWNER }}/${{ env.DEPLOY_REPO }}
-#          event-type: app_delivery
-#          client-payload: '{
-#            "app_image": "${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.APP_REPO }}",
-#            "app_name": "${{ env.APP_REPO }}",
-#            "app_version": "${{ env.VERSION }}"
-#          }'
+  deliver:
+    name: Deliver release candidate to production
+    needs: [ functional, performance, security ]
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Deliver application to production
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.DISPATCH_TOKEN }}
+          repository: ${{ env.OWNER }}/${{ env.DEPLOY_REPO }}
+          event-type: app_delivery
+          client-payload: '{
+            "app_image": "${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.APP_REPO }}",
+            "app_name": "${{ env.APP_REPO }}",
+            "app_version": "${{ env.VERSION }}"
+          }'
